src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@tmT-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized-to-edges true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized]
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized, Activated]

unmaximize configure:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
