src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@tmT-wfsBN-wmB.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nwant maximized: B\nconfig:\nwindow-rule {\n    open-maximized-to-edges true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Activated, Maximized]

unmaximize configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
